2002-03-23  Heikki Sairanen  <hex@localhost.localdomain>

	* Main/Source/game.cpp: Added the function key to character's AssignName

	* Main/Source/charba.cpp (AssignName): Function added
	
	* Main/Source/game.cpp (PositionQuestion): Function added.

	
2002-03-22  Heikki Sairanen  <hex@localhost.localdomain>

	* Main/Source/charba.cpp (Look): Deleted odd GetIsPlayer() test

2002-03-22  Heikki Sairanen  <heikki.sairanen@phpoint.net>

	* FELL/Include/felist.h (class felist): DrawDescription moved to .cpp to correct an odd Linux bug.
	* FELL/Source/felist.cpp:

	
March 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Humanoid.pcx: Some humanoids dismembered by Kahvi

March 21 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* GetHitValue() of material and GetArmorValue() of material and item replaced by StrengthValue()
	  * Modified files:
	    * stack.cpp
	    * itemba.cpp
	      * ushort item::StrengthValue() const added
	    * itemde.cpp
	      * ushort bodypart::StrengthValue() const added
	    * charba.cpp
	    * charde.cpp
	    * materba.h
	      * ushort material::GetHitValue() const removed
	      * ushort material::GetArmorValue() const removed
	      * ushort material::StrengthValue() const added
	    * materde.h
	      * Numerous ushort xxx::GetHitValue() consts removed
	      * Numerous ushort xxx::GetArmorValue() consts removed
	      * Numerous ushort xxx::StrengthValue() consts added
	    * itemba.h
	      * uchar item::SurfaceMaterial() const added
	    * itemde.h
	      * Some ushort xxx::GetArmorValue() consts removed
	* Master data member added to bodypart
	  * Modified files:
		* itemde.cpp
	    * itemde.h
	      * character* bodypart::GetMaster() const 
	      * void bodypart::SetMaster(character* What)
	* StrengthModifier attributes added to items
	  * Modified files:
		* itemba.cpp
	    * itemba.h
	      * ushort item::StrengthModifier() const added
		* itemde.cpp
	    * itemde.h
	      * Numerous ushort xxx::StrengthModifier() const added