@@ -241,7 +241,7 @@ Dungeon 0;
 
 		Square, Random { Walkable=true; InRoom=false; }
 		{
-			Character=ivan { Team=7; }
+			Character=communist { Team=7; }
 		}
 	}
 
